parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONTINUE
    DO
    GOTO
    PRINT
    READ
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID statements END
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     var_dec -> ID
Rule 8     var_dec -> ID LPAREN NUMBER RPAREN
Rule 9     expression -> expression EQ expression
Rule 10    expression -> expression NE expression
Rule 11    expression -> expression LT expression
Rule 12    expression -> expression LE expression
Rule 13    expression -> expression GT expression
Rule 14    expression -> expression GE expression
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression TIMES expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression AND expression
Rule 20    expression -> expression OR expression
Rule 21    expression -> NOT expression
Rule 22    expression -> TRUE
Rule 23    expression -> FALSE
Rule 24    if_statement -> IF LPAREN expression RPAREN THEN statements ENDIF
Rule 25    if_statement -> IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> NUMBER
Rule 28    expression -> ID
Rule 29    assign_target -> ID
Rule 30    assign_target -> ID LPAREN expression RPAREN
Rule 31    id_list -> var_dec
Rule 32    id_list -> id_list COMMA var_dec
Rule 33    type -> INTEGER
Rule 34    type -> REAL
Rule 35    type -> LOGICAL
Rule 36    assignment -> assign_target EQUALS expression
Rule 37    declaration -> type id_list

Terminals, with rules where they appear

AND                  : 19
COMMA                : 32
CONTINUE             : 
DIVIDE               : 18
DO                   : 
ELSE                 : 25
END                  : 1
ENDIF                : 24 25
EQ                   : 9
EQUALS               : 36
FALSE                : 23
GE                   : 14
GOTO                 : 
GT                   : 13
ID                   : 1 7 8 28 29 30
IF                   : 24 25
INTEGER              : 33
LE                   : 12
LOGICAL              : 35
LPAREN               : 8 24 25 26 30
LT                   : 11
MINUS                : 16
NE                   : 10
NOT                  : 21
NUMBER               : 8 27
OR                   : 20
PLUS                 : 15
PRINT                : 
PROGRAM              : 1
READ                 : 
REAL                 : 34
RPAREN               : 8 24 25 26 30
STRING               : 
THEN                 : 24 25
TIMES                : 17
TRUE                 : 22
error                : 

Nonterminals, with rules where they appear

assign_target        : 36
assignment           : 5
declaration          : 4
expression           : 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 24 25 26 30 36
id_list              : 32 37
if_statement         : 6
program              : 0
statement            : 2 3
statements           : 1 3 24 25 25
type                 : 37
var_dec              : 31 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID statements END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID statements END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . statements END
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (37) declaration -> . type id_list
    (36) assignment -> . assign_target EQUALS expression
    (24) if_statement -> . IF LPAREN expression RPAREN THEN statements ENDIF
    (25) if_statement -> . IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
    (33) type -> . INTEGER
    (34) type -> . REAL
    (35) type -> . LOGICAL
    (29) assign_target -> . ID
    (30) assign_target -> . ID LPAREN expression RPAREN

    IF              shift and go to state 12
    INTEGER         shift and go to state 13
    REAL            shift and go to state 14
    LOGICAL         shift and go to state 15
    ID              shift and go to state 4

    statements                     shift and go to state 5
    statement                      shift and go to state 6
    declaration                    shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    type                           shift and go to state 10
    assign_target                  shift and go to state 11

state 4

    (29) assign_target -> ID .
    (30) assign_target -> ID . LPAREN expression RPAREN

    EQUALS          reduce using rule 29 (assign_target -> ID .)
    LPAREN          shift and go to state 16


state 5

    (1) program -> PROGRAM ID statements . END
    (3) statements -> statements . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (37) declaration -> . type id_list
    (36) assignment -> . assign_target EQUALS expression
    (24) if_statement -> . IF LPAREN expression RPAREN THEN statements ENDIF
    (25) if_statement -> . IF LPAREN expression RPAREN THEN statements ELSE statements ENDIF
    (33) type -> . INTEGER
    (34) type -> . REAL
    (35) type -> . LOGICAL
    (29) assign_target -> . ID
    (30) assign_target -> . ID LPAREN expression RPAREN

    END             shift and go to state 17
    IF              shift and go to state 12
    INTEGER         shift and go to state 13
    REAL            shift and go to state 14
    LOGICAL         shift and go to state 15
    ID              shift and go to state 4

    statement                      shift and go to state 18
    declaration                    shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    type                           shift and go to state 10
    assign_target                  shift and go to state 11

state 6

    (2) statements -> statement .

    END             reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    INTEGER         reduce using rule 2 (statements -> statement .)
    REAL            reduce using rule 2 (statements -> statement .)
    LOGICAL         reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    ENDIF           reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)


state 7

    (4) statement -> declaration .

    END             reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    INTEGER         reduce using rule 4 (statement -> declaration .)
    REAL            reduce using rule 4 (statement -> declaration .)
    LOGICAL         reduce using rule 4 (statement -> declaration .)
    ID              reduce using rule 4 (statement -> declaration .)
    ENDIF           reduce using rule 4 (statement -> declaration .)
    ELSE            reduce using rule 4 (statement -> declaration .)


state 8

    (5) statement -> assignment .

    END             reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    INTEGER         reduce using rule 5 (statement -> assignment .)
    REAL            reduce using rule 5 (statement -> assignment .)
    LOGICAL         reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    ENDIF           reduce using rule 5 (statement -> assignment .)
    ELSE            reduce using rule 5 (statement -> assignment .)


state 9

    (6) statement -> if_statement .

    END             reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    INTEGER         reduce using rule 6 (statement -> if_statement .)
    REAL            reduce using rule 6 (statement -> if_statement .)
    LOGICAL         reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    ENDIF           reduce using rule 6 (statement -> if_statement .)
    ELSE            reduce using rule 6 (statement -> if_statement .)


state 10

    (37) declaration -> type . id_list
    (31) id_list -> . var_dec
    (32) id_list -> . id_list COMMA var_dec
    (7) var_dec -> . ID
    (8) var_dec -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 21

    id_list                        shift and go to state 19
    var_dec                        shift and go to state 20

state 11

    (36) assignment -> assign_target . EQUALS expression

    EQUALS          shift and go to state 22


state 12

    (24) if_statement -> IF . LPAREN expression RPAREN THEN statements ENDIF
    (25) if_statement -> IF . LPAREN expression RPAREN THEN statements ELSE statements ENDIF

    LPAREN          shift and go to state 23


state 13

    (33) type -> INTEGER .

    ID              reduce using rule 33 (type -> INTEGER .)


state 14

    (34) type -> REAL .

    ID              reduce using rule 34 (type -> REAL .)


state 15

    (35) type -> LOGICAL .

    ID              reduce using rule 35 (type -> LOGICAL .)


state 16

    (30) assign_target -> ID LPAREN . expression RPAREN
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 26

state 17

    (1) program -> PROGRAM ID statements END .

    $end            reduce using rule 1 (program -> PROGRAM ID statements END .)


state 18

    (3) statements -> statements statement .

    END             reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    INTEGER         reduce using rule 3 (statements -> statements statement .)
    REAL            reduce using rule 3 (statements -> statements statement .)
    LOGICAL         reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    ENDIF           reduce using rule 3 (statements -> statements statement .)
    ELSE            reduce using rule 3 (statements -> statements statement .)


state 19

    (37) declaration -> type id_list .
    (32) id_list -> id_list . COMMA var_dec

    END             reduce using rule 37 (declaration -> type id_list .)
    IF              reduce using rule 37 (declaration -> type id_list .)
    INTEGER         reduce using rule 37 (declaration -> type id_list .)
    REAL            reduce using rule 37 (declaration -> type id_list .)
    LOGICAL         reduce using rule 37 (declaration -> type id_list .)
    ID              reduce using rule 37 (declaration -> type id_list .)
    ENDIF           reduce using rule 37 (declaration -> type id_list .)
    ELSE            reduce using rule 37 (declaration -> type id_list .)
    COMMA           shift and go to state 31


state 20

    (31) id_list -> var_dec .

    COMMA           reduce using rule 31 (id_list -> var_dec .)
    END             reduce using rule 31 (id_list -> var_dec .)
    IF              reduce using rule 31 (id_list -> var_dec .)
    INTEGER         reduce using rule 31 (id_list -> var_dec .)
    REAL            reduce using rule 31 (id_list -> var_dec .)
    LOGICAL         reduce using rule 31 (id_list -> var_dec .)
    ID              reduce using rule 31 (id_list -> var_dec .)
    ENDIF           reduce using rule 31 (id_list -> var_dec .)
    ELSE            reduce using rule 31 (id_list -> var_dec .)


state 21

    (7) var_dec -> ID .
    (8) var_dec -> ID . LPAREN NUMBER RPAREN

    COMMA           reduce using rule 7 (var_dec -> ID .)
    END             reduce using rule 7 (var_dec -> ID .)
    IF              reduce using rule 7 (var_dec -> ID .)
    INTEGER         reduce using rule 7 (var_dec -> ID .)
    REAL            reduce using rule 7 (var_dec -> ID .)
    LOGICAL         reduce using rule 7 (var_dec -> ID .)
    ID              reduce using rule 7 (var_dec -> ID .)
    ENDIF           reduce using rule 7 (var_dec -> ID .)
    ELSE            reduce using rule 7 (var_dec -> ID .)
    LPAREN          shift and go to state 32


state 22

    (36) assignment -> assign_target EQUALS . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 33

state 23

    (24) if_statement -> IF LPAREN . expression RPAREN THEN statements ENDIF
    (25) if_statement -> IF LPAREN . expression RPAREN THEN statements ELSE statements ENDIF
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 34

state 24

    (28) expression -> ID .

    RPAREN          reduce using rule 28 (expression -> ID .)
    EQ              reduce using rule 28 (expression -> ID .)
    NE              reduce using rule 28 (expression -> ID .)
    LT              reduce using rule 28 (expression -> ID .)
    LE              reduce using rule 28 (expression -> ID .)
    GT              reduce using rule 28 (expression -> ID .)
    GE              reduce using rule 28 (expression -> ID .)
    PLUS            reduce using rule 28 (expression -> ID .)
    MINUS           reduce using rule 28 (expression -> ID .)
    TIMES           reduce using rule 28 (expression -> ID .)
    DIVIDE          reduce using rule 28 (expression -> ID .)
    AND             reduce using rule 28 (expression -> ID .)
    OR              reduce using rule 28 (expression -> ID .)
    END             reduce using rule 28 (expression -> ID .)
    IF              reduce using rule 28 (expression -> ID .)
    INTEGER         reduce using rule 28 (expression -> ID .)
    REAL            reduce using rule 28 (expression -> ID .)
    LOGICAL         reduce using rule 28 (expression -> ID .)
    ID              reduce using rule 28 (expression -> ID .)
    ENDIF           reduce using rule 28 (expression -> ID .)
    ELSE            reduce using rule 28 (expression -> ID .)


state 25

    (26) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 35

state 26

    (30) assign_target -> ID LPAREN expression . RPAREN
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NE expression
    (11) expression -> expression . LT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GT expression
    (14) expression -> expression . GE expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression

    RPAREN          shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    LT              shift and go to state 39
    LE              shift and go to state 40
    GT              shift and go to state 41
    GE              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 27

    (21) expression -> NOT . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 49

state 28

    (22) expression -> TRUE .

    RPAREN          reduce using rule 22 (expression -> TRUE .)
    EQ              reduce using rule 22 (expression -> TRUE .)
    NE              reduce using rule 22 (expression -> TRUE .)
    LT              reduce using rule 22 (expression -> TRUE .)
    LE              reduce using rule 22 (expression -> TRUE .)
    GT              reduce using rule 22 (expression -> TRUE .)
    GE              reduce using rule 22 (expression -> TRUE .)
    PLUS            reduce using rule 22 (expression -> TRUE .)
    MINUS           reduce using rule 22 (expression -> TRUE .)
    TIMES           reduce using rule 22 (expression -> TRUE .)
    DIVIDE          reduce using rule 22 (expression -> TRUE .)
    AND             reduce using rule 22 (expression -> TRUE .)
    OR              reduce using rule 22 (expression -> TRUE .)
    END             reduce using rule 22 (expression -> TRUE .)
    IF              reduce using rule 22 (expression -> TRUE .)
    INTEGER         reduce using rule 22 (expression -> TRUE .)
    REAL            reduce using rule 22 (expression -> TRUE .)
    LOGICAL         reduce using rule 22 (expression -> TRUE .)
    ID              reduce using rule 22 (expression -> TRUE .)
    ENDIF           reduce using rule 22 (expression -> TRUE .)
    ELSE            reduce using rule 22 (expression -> TRUE .)


state 29

    (23) expression -> FALSE .

    RPAREN          reduce using rule 23 (expression -> FALSE .)
    EQ              reduce using rule 23 (expression -> FALSE .)
    NE              reduce using rule 23 (expression -> FALSE .)
    LT              reduce using rule 23 (expression -> FALSE .)
    LE              reduce using rule 23 (expression -> FALSE .)
    GT              reduce using rule 23 (expression -> FALSE .)
    GE              reduce using rule 23 (expression -> FALSE .)
    PLUS            reduce using rule 23 (expression -> FALSE .)
    MINUS           reduce using rule 23 (expression -> FALSE .)
    TIMES           reduce using rule 23 (expression -> FALSE .)
    DIVIDE          reduce using rule 23 (expression -> FALSE .)
    AND             reduce using rule 23 (expression -> FALSE .)
    OR              reduce using rule 23 (expression -> FALSE .)
    END             reduce using rule 23 (expression -> FALSE .)
    IF              reduce using rule 23 (expression -> FALSE .)
    INTEGER         reduce using rule 23 (expression -> FALSE .)
    REAL            reduce using rule 23 (expression -> FALSE .)
    LOGICAL         reduce using rule 23 (expression -> FALSE .)
    ID              reduce using rule 23 (expression -> FALSE .)
    ENDIF           reduce using rule 23 (expression -> FALSE .)
    ELSE            reduce using rule 23 (expression -> FALSE .)


state 30

    (27) expression -> NUMBER .

    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    EQ              reduce using rule 27 (expression -> NUMBER .)
    NE              reduce using rule 27 (expression -> NUMBER .)
    LT              reduce using rule 27 (expression -> NUMBER .)
    LE              reduce using rule 27 (expression -> NUMBER .)
    GT              reduce using rule 27 (expression -> NUMBER .)
    GE              reduce using rule 27 (expression -> NUMBER .)
    PLUS            reduce using rule 27 (expression -> NUMBER .)
    MINUS           reduce using rule 27 (expression -> NUMBER .)
    TIMES           reduce using rule 27 (expression -> NUMBER .)
    DIVIDE          reduce using rule 27 (expression -> NUMBER .)
    AND             reduce using rule 27 (expression -> NUMBER .)
    OR              reduce using rule 27 (expression -> NUMBER .)
    END             reduce using rule 27 (expression -> NUMBER .)
    IF              reduce using rule 27 (expression -> NUMBER .)
    INTEGER         reduce using rule 27 (expression -> NUMBER .)
    REAL            reduce using rule 27 (expression -> NUMBER .)
    LOGICAL         reduce using rule 27 (expression -> NUMBER .)
    ID              reduce using rule 27 (expression -> NUMBER .)
    ENDIF           reduce using rule 27 (expression -> NUMBER .)
    ELSE            reduce using rule 27 (expression -> NUMBER .)


state 31

    (32) id_list -> id_list COMMA . var_dec
    (7) var_dec -> . ID
    (8) var_dec -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 21

    var_dec                        shift and go to state 50

state 32

    (8) var_dec -> ID LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 51


state 33

    (36) assignment -> assign_target EQUALS expression .
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NE expression
    (11) expression -> expression . LT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GT expression
    (14) expression -> expression . GE expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression

    END             reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    IF              reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    INTEGER         reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    REAL            reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    LOGICAL         reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    ID              reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    ENDIF           reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    ELSE            reduce using rule 36 (assignment -> assign_target EQUALS expression .)
    EQ              shift and go to state 37
    NE              shift and go to state 38
    LT              shift and go to state 39
    LE              shift and go to state 40
    GT              shift and go to state 41
    GE              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 34

    (24) if_statement -> IF LPAREN expression . RPAREN THEN statements ENDIF
    (25) if_statement -> IF LPAREN expression . RPAREN THEN statements ELSE statements ENDIF
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NE expression
    (11) expression -> expression . LT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GT expression
    (14) expression -> expression . GE expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression

    RPAREN          shift and go to state 52
    EQ              shift and go to state 37
    NE              shift and go to state 38
    LT              shift and go to state 39
    LE              shift and go to state 40
    GT              shift and go to state 41
    GE              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 35

    (26) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NE expression
    (11) expression -> expression . LT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GT expression
    (14) expression -> expression . GE expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression

    RPAREN          shift and go to state 53
    EQ              shift and go to state 37
    NE              shift and go to state 38
    LT              shift and go to state 39
    LE              shift and go to state 40
    GT              shift and go to state 41
    GE              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 36

    (30) assign_target -> ID LPAREN expression RPAREN .

    EQUALS          reduce using rule 30 (assign_target -> ID LPAREN expression RPAREN .)


state 37

    (9) expression -> expression EQ . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 54

state 38

    (10) expression -> expression NE . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 55

state 39

    (11) expression -> expression LT . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 56

state 40

    (12) expression -> expression LE . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 57

state 41

    (13) expression -> expression GT . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 58

state 42

    (14) expression -> expression GE . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 59

state 43

    (15) expression -> expression PLUS . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24

    expression                     shift and go to state 60

state 44

    (16) expression -> expression MINUS . expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GT expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . ID

    NOT             shift and go to state 27
    TRUE            shift and go to state 28
    FALSE           shift and go to state 29
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 30
    ID              shift and go to state 24
